fixed graph location

--- a/templates/masks.html
+++ b/templates/masks.html
@@ -79,7 +79,7 @@ Click to screen your PPE material: <button type="submit" name="submit_button">Es
 <p><b><font size = '4'>See how your material compares with an n95 respirator in the violin plots below</font></b><br/>
 <a href='https://www.labxchange.org/library/items/lb:LabXchange:46f64d7a:html:1'>How To Interpret Violin Plots</a>
 <br/>
-<img src="https://PPECalculator.pythonanywhere.com/static/graph.png">
+<img src="/static/graph.png">
 </p>
 <p><b><font size = '4'>Here are your material inputs</font></b>
 {{ result | safe }}</p>
