updated button format

--- a/templates/masks.html
+++ b/templates/masks.html
@@ -14,7 +14,7 @@
 </head>
 
 <header>
-  <h1 style="text-align:center">PPE Risk Calculator: Respirator Performance</h1>
+  <h1 style="text-align:center">PPE Calculator: Respirator Performance</h1>
 </header>
 
 <p> For details on how to use the PPE Risk Calculators, please click the information icons next to each section header and read the
@@ -70,8 +70,8 @@
 <!--  </div>-->
 <!--</div>-->
 
-<h3> PPE Risk assessment </h3>
-Click to screen your PPE material: <button type="submit" name="submit_button">Estimate Log<sub>10</sub> Reduction of Viable Particles</button>
+  <br/>
+  <button type="submit" name="submit_button">Estimate Log<sub>10</sub> Reduction of Viable Particles</button>
 
 </form>
 
