additional formatting changes

--- a/templates/masks.html
+++ b/templates/masks.html
@@ -81,10 +81,10 @@
 <br/>
 <img src="/static/graph.png">
 </p>
-<p><b><font size = '4'>Here are your material inputs</font></b>
+<p><b><font size = '4'>Material inputs</font></b>
 {{ result | safe }}</p>
-<p><b><font size = '4'>How does each mechanism of filtration perform?</font></b>
-{{ result3 | safe }}</p>
+<!--<p><b><font size = '4'>Filtration mechanisms</font></b>
+{{ result3 | safe }}</p>-->
 <p><b><font size = '4'>Predicted Overall Filtration Efficiency as per ASTM F2101</font></b>
 {{ result4 | safe }}</p>
 <p><b><font size = '4'>Percentiles of normalized log<sub>10</sub> reduction values at each particle size range</font></b>
