--- a/templates/masks.html
+++ b/templates/masks.html
@@ -10,26 +10,50 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <link rel= "stylesheet" type= "text/css" href= "https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
   <link rel= "stylesheet" type= "text/css" href= "/static/css/styles.css">
-
+  <style>
+        #content {
+            display: none;
+        }
+        #loading {
+            display: none;
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 24px;
+        }
+        .spinner {
+            border: 16px solid #f3f3f3;
+            border-top: 16px solid #3498db;
+            border-radius: 50%;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+  </style>
 </head>
 
 <header>
-  <h1 style="text-align:center">PPE Calculator: Respirator Performance</h1>
+  <h1 style="text-align:center">PPE Risk Calculator: Respirator Performance</h1>
 </header>
 
 <p> For details on how to use the PPE Risk Calculators, please click the information icons next to each section header and read the
-  <a href="/COU"> Context of Use (CoU)</a>, which includes limitations of use. Answers to frequently asked questions can be
-  found <a href="/FAQ"> here</a>. </p>
+  <a href="/PPERisk/COU"> Context of Use (CoU)</a>, which includes limitations of use. Answers to frequently asked questions can be
+  found <a href="/PPERisk/FAQ"> here</a>. </p>
 
 <body>
 
-<form method="POST">
+<form id="maskForm">
 
 <h3> Material Characteristics <button type="button" class="Info_btn" data-toggle="modal" data-target="#CharModal" >&#9432;</button> </h3>
 
 <i>d<sub>f</sub></i> &emsp; Mean Fiber Diameter (µm): <input name="df" id="df" value="5.0" step="0.01" min="0.01" max="10" type="number" required> &emsp;&emsp;Fiber Diameter Standard Deviation (µm): <input name="dfsd" id="dfsd" value="0.1" step="0.01" min="0.01" max="10" type="number" required> <br>
 
-<i>α</i> &emsp; Mean Packing Density: <input name="packingdensity" id="packingdensity" value="0.07" step="0.01" min="0.01" max="1.00" type="number" required> &emsp;&emsp;Packing Density Standard Deviation: <input name="packingdensitysd" id="packingdensitysd" value="0.10" step="0.01" min="0.01" max="1.00" type="number" required> <br>
+<i>α</i> &emsp; Mean Packing Density: <input name="packingdensity" id="packingdensity" value="0.07" step="0.001" min="0.001" max="1.00" type="number" required> &emsp;&emsp;Packing Density Standard Deviation: <input name="packingdensitysd" id="packingdensitysd" value="0.01" step="0.001" min="0.001" max="1.00" type="number" required> <br>
 
 <i>L</i> &emsp; Mean Thickness (µm): <input name="thick" id="thick" value="500" step="0.1" min="150" max="2500" type="number" required> &emsp;&emsp;Thickness Standard Deviation(µm): <input name="thicksd" id="thicksd" value="10" step="0.1" min="0.1" max="1000" type="number" required> <br>
 
@@ -56,39 +80,65 @@
   </div>
 </div>
 
-<!--        <p>:</p>-->
-<!--        <p><em>SEM Imaging - </em>  In order to obtain the fiber sizes we used for validation, SEM imaging of the filter layer with a magnification between 1.4kx and 1.5kx were taken and subject to analysis using Fiji and the DiamaterJ plugin </p>-->
-<!--        <p><em>Fiji 1.51w - </em> Fiji is a version of ImageJ - an NIH developed image processing program - and to maintain accuracy and reproducibility, please use the version of Fiji (1.51w) that was used to analyze SEM images of the PPE material</p>-->
-<!--        <p><em>DiameterJ - </em> DiameterJ is a plugin that is used through Fiji and ImageJ. DiameterJ can be split into two plugins - DiameterJ Segment and DiameterJ 1-018. DiameterJ Segment turns SEM images into Binary black/white imaging according to specific algorithms. DiameterJ 1-018 is used to measure pore sizes and fiber characteristics using the output from DiameterJ Segment </p>-->
-<!--        <p><em>ASTM Standards - </em> Several standards were followed in order to create reproducibility and replicability </p>-->
-<!--      </div>-->
-<!--      <div class="modal-footer">-->
-<!--        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--  </div>-->
-<!--</div>-->
-
-  <br/>
-  <button type="submit" name="submit_button">Estimate Log<sub>10</sub> Reduction of Viable Particles</button>
+<h3> PPE Risk assessment </h3>
+Click to screen your PPE material: <button type="submit" id="submit_button">Estimate Log<sub>10</sub> Reduction of Viable Particles</button>
 
 </form>
+<script>
+    document.getElementById('maskForm').addEventListener('input', function() {
+        const df = parseFloat(document.getElementById('df').value);
+        const dfsd = parseFloat(document.getElementById('dfsd').value);
+        const packingdensity = parseFloat(document.getElementById('packingdensity').value);
+        const packingdensitysd = parseFloat(document.getElementById('packingdensitysd').value);
+        const thick = parseFloat(document.getElementById('thick').value);
+        const thicksd = parseFloat(document.getElementById('thicksd').value);
 
-<br/>
-<p><b><font size = '4'>See how your material compares with an n95 respirator in the violin plots below</font></b><br/>
-<a href='https://www.labxchange.org/library/items/lb:LabXchange:46f64d7a:html:1'>How To Interpret Violin Plots</a>
-<br/>
-<img src="/static/graph.png">
-</p>
-<p><b><font size = '4'>Material inputs</font></b>
-{{ result | safe }}</p>
-<!--<p><b><font size = '4'>Filtration mechanisms</font></b>
-{{ result3 | safe }}</p>-->
-<p><b><font size = '4'>Predicted Overall Filtration Efficiency as per ASTM F2101</font></b>
-{{ result4 | safe }}</p>
-<p><b><font size = '4'>Percentiles of normalized log<sub>10</sub> reduction values at each particle size range</font></b>
-{{ result2 | safe }}</p>
+        if (dfsd > df) {
+            alert('Fiber Diameter Standard Deviation cannot exceed the Mean Fiber Diameter.');
+            document.getElementById('dfsd').value = df;
+        }
+        if (packingdensitysd > packingdensity) {
+            alert('Packing Density Standard Deviation cannot exceed the Mean Packing Density.');
+            document.getElementById('packingdensitysd').value = packingdensity;
+        }
+        if (thicksd > thick) {
+            alert('Thickness Standard Deviation cannot exceed the Mean Thickness.');
+            document.getElementById('thicksd').value = thick;
+        }
+    });
+</script>
+<div id="loading">
+    <div class="spinner"></div>
+</div>
+<div id="content">
+    </div>
 
+    <script>
+        document.getElementById('submit_button').addEventListener('click', function(event) {
+            event.preventDefault();
+            document.getElementById('loading').style.display = 'block';
+            var formData = new FormData(document.getElementById('maskForm'));
+            fetch('/', {
+                method: 'POST',
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('content').innerHTML = `
+                    <p><b><font size='4'>See how your material compares with an N95 respirator in the violin plots below</font></b><br/>
+                    <a href='https://www.labxchange.org/library/items/lb:LabXchange:46f64d7a:html:1'>How To Interpret Violin Plots</a><br/>
+                    <img src="data:image/png;base64,${data.graph}"></p>
+                    <p><b><font size='4'>Predicted Overall Filtration Efficiency as per ASTM F2101</font></b>${data.result4}</p>
+                    <p><b><font size='4'>Percentiles of normalized log<sub>10</sub> reduction values at each particle size range</font></b>${data.result2}</p>
+                `;
+                document.getElementById('content').style.display = 'block';
+                document.getElementById('loading').style.display = 'none';
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                document.getElementById('loading').style.display = 'none';
+            });
+        });
+    </script>
 </body>
 </html>
