--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -33,7 +33,7 @@ used in a regulatory context?</h3>
 <p>The T-test takes into consideration 10,000 samples of each, therefore producing a very small margin of error.</p>
 <h3>What if I have suggestions for inclusion of additional material characteristics within the PPE Risk Calculator or changes to the user interface?</h3>
 <p>If you have a suggestion to expand the applicability of the tool or
-improve the user interface, please contact Andrew Martin: <a
-href="mailto:andrew.martin@fda.hhs.gov"
-class="email">andrew.martin@fda.hhs.gov</a>.</p>
+improve the user interface, please contact Dr. Enusha Karunasena: <a
+href="mailto:Enusha.karunasena@fda.hhs.gov"
+class="email">Enusha.karunasena@fda.hhs.gov</a>.</p>
 <a href='javascript:history.back()'>Back</a>
